# mavlink2rest

./: Cargo.toml
examples/: websocket_client.py
src/mavftp/: controller.rs  main.rs  mavftp.rs
wasm/: Cargo.toml
wasm/src/: app.rs  main.rs
