[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
egui = "0.27"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tokio = { version = "1", features = ["full"] }
#tungstenite = "0.24"
ewebsock = { version = "0.6.0", features = [] }
url = "2.5"

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros"
]}
tokio_with_wasm = { version = "0.7.1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
]}

[dependencies.getrandom]
version = "*"
features = ["js"]